# maildir-addresses

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
maildir_addresses/: __init__.py  __main__.py
maildir_addresses/subcommand/: __init__.py
tests/: test_maildir_addresses.py  testutils.py
tests/test-files/: greeting-goodbye-expected.txt
