[project]
name = "maildir-addresses"
version = "0.1"
description = "Scan a maildir tree for email addresses in From/To/Cc headers"
license = "GPL-3.0-or-later"
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/maildir-addresses"}
requires-python = ">= 3.12"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
maildir-addresses = "maildir_addresses:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = [
    "setuptools",
]

[tool.setuptools]
packages = [
    "maildir_addresses",
    "maildir_addresses.subcommand",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
xfail_strict = true

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "D415", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
deps = ["pyright", "pytest", "ruff", "types-setuptools"]
commands = [
    ["pyright", "maildir_addresses"],
    ["ruff", "check", "maildir_addresses"],
    ["pytest", "-Wdefault", {replace = "posargs", extend = true}],
]
extras = ["test"]
